--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // FIXME
-$window-width: 480px;
+$window-width: 425px;
 
 // z-indexes
-$header: 1;
+$header: 5;
 $nav-bar: 10;
